--- a/frontend/components.json
+++ b/frontend/components.json
@@ -1,9 +1,7 @@
 {
-  "$schema": "https://shadcn-vue.com/schema.json",
-  "style": "new-york",
-  "typescript": true,
+  "style": "default",
   "tailwind": {
-    "config": "",
+    "config": "./tailwind.config.js",
     "css": "src/styles/globals.css",
     "baseColor": "neutral",
     "cssVariables": true,
@@ -16,5 +14,7 @@
     "ui": "@/components/ui",
     "lib": "@/lib"
   },
+  "$schema": "https://shadcn-vue.com/schema.json",
+  "typescript": true,
   "iconLibrary": "lucide"
 }
